# mod_dotnet

./: .gitignore  Makefile.am  Managed.sln  README.md  configure.ac  mod_coreclr.c  swig.i  swig.sh
Loader/: Loader.cs  Loader.csproj  Log.cs  PluginLoadContext.cs  PluginsContainer.cs  swig.cs
PluginInterface/: ConfigHelper.cs  IPluginDispatcher.cs  Ivr.cs  Log.cs  PluginInterface.csproj  swig.cs
SimpleXMLDP/: SimpleXMLDP.csproj  SimpleXMLDPDispatcher.cs
inc/: ManagedSession.h  mod_coreclr.h
src/: ManagedSession.cpp  mod_coreclr.c  swig.cpp
